Color Themes (BPS)

--- a/src/global.css
+++ b/src/global.css
@@ -105,7 +105,7 @@
   border-bottom: 1px solid transparent;
   border-right: 121px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
@@ -122,7 +122,7 @@
   border-bottom: 1px solid transparent;
   border-right: 154px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
@@ -139,7 +139,7 @@
   border-bottom: 1px solid transparent;
   border-right: 91px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
@@ -156,7 +156,7 @@
   border-bottom: 1px solid transparent;
   border-right: 110px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
@@ -173,7 +173,7 @@
   border-bottom: 1px solid transparent;
   border-right: 130px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
@@ -190,7 +190,7 @@
   border-bottom: 1px solid transparent;
   border-right: 90px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
@@ -207,7 +207,7 @@
   border-bottom: 1px solid transparent;
   border-right: 193px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
@@ -224,7 +224,7 @@
   border-bottom: 1px solid transparent;
   border-right: 90px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
@@ -241,7 +241,7 @@
   border-bottom: 1px solid transparent;
   border-right: 105px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
@@ -258,7 +258,7 @@
   border-bottom: 1px solid transparent;
   border-right: 162px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
@@ -275,7 +275,7 @@
   border-bottom: 1px solid transparent;
   border-right: 169px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
@@ -292,7 +292,7 @@
   border-bottom: 1px solid transparent;
   border-right: 138px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
-     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
@@ -311,7 +311,8 @@
   10% {
     opacity: 1;
   }
-  20%, 100% {
+  20%,
+  100% {
     transform: rotate(30deg) translate(100%, 100%);
     opacity: 0;
   }
@@ -326,7 +327,7 @@
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  background-image: linear-gradient(-225deg, #fff 0%, #34ffe0 48%, #5eead4 100%);
+  background-image: var(--linear-gradient-animate);
 }
 .textflip-animate.color__effect span {
   background-size: 200% auto;
@@ -334,7 +335,7 @@
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  background-image: linear-gradient(-225deg, #fff 0%, #34ffe0 48%, #5eead4 100%);
+  background-image: var(--linear-gradient-animate);
 }
 .textflip-animate.color__effect span:before {
   transition: color 0.3s;
@@ -344,7 +345,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: textclip 4.95s linear infinite;
-  background-image: linear-gradient(-225deg, #fff 0%, #34ffe0 48%, #5eead4 100%);
+  background-image: var(--linear-gradient-animate);
 }
 .textflip-animate span {
   position: relative;
@@ -367,9 +368,6 @@
   text-align: left;
   white-space: nowrap;
 }
-.textflip-animate.flipped::before {
-  color: rgb(210, 73, 54);
-}
 
 .icontextflip-animate {
   perspective: 1000px;
@@ -382,7 +380,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: textclip 1s linear infinite;
-  background-image: linear-gradient(-225deg, #fff 0%, #34ffe0 48%, #5eead4 100%);
+  background-image: var(--linear-gradient-animate);
 }
 .icontextflip-animate.color__effect__hover:hover strong span {
   background-size: 200% auto;
@@ -390,7 +388,7 @@
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  background-image: linear-gradient(-225deg, #fff 0%, #34ffe0 48%, #5eead4 100%);
+  background-image: var(--linear-gradient-animate);
 }
 .icontextflip-animate.color__effect__hover:hover strong span:before {
   transition: color 0.3s;
@@ -400,7 +398,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: textclip 4.95s linear infinite;
-  background-image: linear-gradient(-225deg, #fff 0%, #34ffe0 48%, #5eead4 100%);
+  background-image: var(--linear-gradient-animate);
 }
 .icontextflip-animate.color__effect i {
   background-size: 200% auto;
@@ -409,7 +407,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: textclip 1s linear infinite;
-  background-image: linear-gradient(-225deg, #fff 0%, #34ffe0 48%, #5eead4 100%);
+  background-image: var(--linear-gradient-animate);
 }
 .icontextflip-animate.color__effect strong span {
   background-size: 200% auto;
@@ -417,7 +415,7 @@
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  background-image: linear-gradient(-225deg, #fff 0%, #34ffe0 48%, #5eead4 100%);
+  background-image: var(--linear-gradient-animate);
 }
 .icontextflip-animate.color__effect strong span:before {
   transition: color 0.3s;
@@ -427,7 +425,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: textclip 4.95s linear infinite;
-  background-image: linear-gradient(-225deg, #fff 0%, #34ffe0 48%, #5eead4 100%);
+  background-image: var(--linear-gradient-animate);
 }
 .icontextflip-animate strong span {
   position: relative;
@@ -450,18 +448,18 @@
   text-align: left;
   white-space: nowrap;
 }
-.icontextflip-animate.flipped::before {
-  color: rgb(210, 73, 54);
-}
 
 @keyframes flip {
-  0%, 20% {
+  0%,
+  20% {
     transform: rotateX(0deg);
   }
-  40%, 60% {
+  40%,
+  60% {
     transform: rotateX(90deg) translateY(-22px);
   }
-  80%, 100% {
+  80%,
+  100% {
     transform: rotateX(0deg);
   }
 }
@@ -476,7 +474,7 @@
 .scroll__down:hover .scroll {
   display: block;
   font-size: 0.75rem;
-  color: #fff;
+  color: rgb(var(--white));
   text-transform: uppercase;
   white-space: nowrap;
   opacity: 0.25;
@@ -503,11 +501,12 @@
 .scroll__down .arrows .arrow:nth-child(2) {
   animation: move 3s ease-out 2s infinite;
 }
-.scroll__down .arrows .arrow:before, .scroll__down .arrows .arrow:after {
+.scroll__down .arrows .arrow:before,
+.scroll__down .arrows .arrow:after {
   content: " ";
   position: absolute;
   top: 0;
-  background: #fff;
+  background: rgb(var(--color-text-primary));
   height: 100%;
   width: 51%;
 }
@@ -608,4 +607,4 @@
   40% {
     transform: translate(0);
   }
-}/*# sourceMappingURL=global.css.map */
+} /*# sourceMappingURL=global.css.map */
