--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -96,7 +96,7 @@ ion-content {
           transition: 0.5s;
 
           &:hover {
-            color: rgb(var(--color-button-primary)) !important;
+            color: rgb(var(--color-text-secondary)) !important;
           }
         }
 
@@ -105,6 +105,8 @@ ion-content {
           gap: 2rem;
 
           button {
+            outline: none;
+
             &.meteor__toggle {
               background: transparent;
 
@@ -138,6 +140,127 @@ ion-content {
             font-size: 1.25rem;
             color: rgb(var(--color-text-primary));
             transition: 0.3s;
+          }
+
+          .themes {
+            position: relative;
+            width: 1.3125rem;
+
+            .themes__list {
+              position: absolute;
+              top: 0;
+              left: 0;
+              flex-direction: column;
+              gap: 1rem;
+
+              &:hover,
+              &.collapsed {
+                .theme {
+                  display: flex;
+                  opacity: 1;
+                }
+              }
+
+              &.collapsed {
+                .theme {
+                  &.default {
+                    transform: scale(1.15);
+                    background: rgb(var(--color-bg-primary));
+                  }
+                }
+              }
+
+              .theme {
+                display: none;
+                width: 1.3125rem;
+                aspect-ratio: 1;
+                border-radius: 50%;
+                border: 1px solid rgb(var(--color-text-primary));
+                cursor: pointer;
+                transition: opacity 1.5s, transform 0.5s;
+                opacity: 0;
+                background: linear-gradient(
+                  to right,
+                  rgb(var(--color-button-primary)) calc(100% / 3 - 1px),
+                  rgb(var(--color-text-primary)) calc(100% / 3) calc(200% / 3),
+                  rgb(var(--color-text-secondary)) calc(200% / 3 - 1px)
+                );
+
+                &:hover {
+                  transform: scale(1.15);
+                }
+
+                &.default {
+                  display: flex;
+                  opacity: 1;
+                }
+
+                &.active {
+                  display: none;
+                  opacity: 0;
+                }
+
+                &[data-theme="britanny"] {
+                  --color-text-primary: 226, 232, 240;
+                  --color-text-secondary: 148, 163, 184;
+                  --color-button-primary: 94, 234, 212;
+                }
+
+                &[data-theme="tron-orange"] {
+                  --color-text-primary: 255, 102, 0;
+                  --color-text-secondary: 226, 232, 240;
+                  --color-button-primary: 240, 232, 0;
+                }
+
+                &[data-theme="joker"] {
+                  --color-text-primary: 117, 84, 163;
+                  --color-text-secondary: 233, 226, 245;
+                  --color-button-primary: 153, 222, 30;
+                }
+
+                &[data-theme="anti-hero"] {
+                  --color-text-primary: 255, 61, 139;
+                  --color-text-secondary: 241, 222, 239;
+                  --color-button-primary: 255, 173, 173;
+                }
+
+                &[data-theme="floret"] {
+                  --color-text-primary: 119, 144, 151;
+                  --color-text-secondary: 229, 229, 229;
+                  --color-button-primary: 255, 221, 109;
+                }
+
+                &[data-theme="dino"] {
+                  --color-text-primary: 213, 213, 213;
+                  --color-text-secondary: 29, 34, 31;
+                  --color-button-primary: 64, 214, 114;
+                }
+
+                &[data-theme="rainbow-trail"] {
+                  --color-text-primary: 79, 79, 79;
+                  --color-text-secondary: 31, 31, 31;
+                  --color-button-primary: 54, 54, 54;
+                }
+
+                &[data-theme="husqy"] {
+                  --color-text-primary: 151, 47, 255;
+                  --color-text-secondary: 235, 215, 255;
+                  --color-button-primary: 197, 138, 255;
+                }
+
+                &[data-theme="matrix"] {
+                  --color-text-primary: 0, 101, 0;
+                  --color-text-secondary: 209, 255, 205;
+                  --color-button-primary: 21, 255, 0;
+                }
+
+                &[data-theme="cyberspace"] {
+                  --color-text-primary: 149, 120, 211;
+                  --color-text-secondary: 194, 251, 225;
+                  --color-button-primary: 0, 206, 124;
+                }
+              }
+            }
           }
         }
       }
@@ -341,9 +464,9 @@ ion-content {
                     }
 
                     i {
-                      transition: color 0.5s, font-size 1s;
+                      transition: color 0.3s, font-size 1.5s;
                       color: rgb(var(--color-button-primary));
-                      font-size: 0rem;
+                      font-size: 1rem;
                       // font-size: 3rem;
                     }
                   }
